--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "compression-webpack-plugin": "^10.0.0",
     "prop-types": "^15.8.1",
     "react-toastify": "^9.1.1",
+    "typewriter-effect": "^2.19.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^5.0.1"
   }
