--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Farm application",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@david.kucsai/react-pdf-table": "^0.4.1",
     "@paypal/react-paypal-js": "^7.8.2",
     "@reduxjs/toolkit": "^1.9.1",
